@@ -1,5 +1,13 @@
 2002-08-10  Havoc Pennington  <hp@pobox.com>
 
+	* src/menu.c: reorder the menu items so that Close is at the
+	bottom
+
+	* src/theme-viewer.c (main): set debugging mode if METACITY_DEBUG
+	enabled
+
+2002-08-10  Havoc Pennington  <hp@pobox.com>
+
 	* src/xprops.c (meta_prop_get_motif_hints): allow Motif hints to
 	be smaller than expected; GLUT for example seems to set a smaller
 	struct. #89841
